--- a/selectors.css
+++ b/selectors.css
@@ -1,10 +1,15 @@
 li {
-  bottom: 16px;
+  margin-bottom: 16px;
 }
 
-a[target="_blank"] {
+li > a[target="_blank"] {
   border: 2px solid black;
 }
+
+a[href*="broken"] {
+  border: 2px solid red;
+}
+
 
 a[href$=".com"] {
   margin-left: 50px;
@@ -18,6 +23,6 @@ a[href*="www"] {
   color: green;
 }
 
-a[title="popular"] {
+a[title*="popular"] {
   font-size: 24px;
 }
